--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "author": "Himanshu Kumar",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.0",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7"
   },
