--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Himanshu Kumar",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
